# tic-tac-toe-solver

./: LICENSE  flake.nix  hie.yaml  tic-tac-toe-solver.cabal
.github/workflows/: default.yml
source/executable/: Main.hs
