cabal-version: 3.0
name: tic-tac-toe-solver
version: 0

flag cabal2nix
  default: False

common language
  default-language: GHC2021
  default-extensions:
    BangPatterns
      -- ^ implied by GHC2021
    BinaryLiterals
      -- ^ implied by GHC2021
    ConstrainedClassMethods
      -- ^ implied by GHC2021
    ConstraintKinds
      -- ^ implied by GHC2021
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
      -- ^ implied by GHC2021
    DeriveFoldable
      -- ^ implied by GHC2021
    DeriveFunctor
      -- ^ implied by GHC2021
    DeriveGeneric
      -- ^ implied by GHC2021
    DeriveLift
      -- ^ implied by GHC2021
    DeriveTraversable
      -- ^ implied by GHC2021
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
      -- ^ implied by GHC2021
    EmptyCase
      -- ^ implied by GHC2021
    EmptyDataDecls
      -- ^ implied by GHC2021
    EmptyDataDeriving
      -- ^ implied by GHC2021
    ExistentialQuantification
      -- ^ implied by GHC2021
    ExplicitForAll
      -- ^ implied by GHC2021
    ExplicitNamespaces
    FieldSelectors
      -- ^ implied by GHC2021
    FlexibleContexts
      -- ^ implied by GHC2021
    FlexibleInstances
      -- ^ implied by GHC2021
    ForeignFunctionInterface
      -- ^ implied by GHC2021
    FunctionalDependencies
    GADTSyntax
      -- ^ implied by GHC2021
    GeneralisedNewtypeDeriving
      -- ^ implied by GHC2021
    HexFloatLiterals
      -- ^ implied by GHC2021
    ImplicitPrelude
      -- ^ implied by GHC2021
    ImportQualifiedPost
      -- ^ implied by GHC2021
    InstanceSigs
      -- ^ implied by GHC2021
    KindSignatures
      -- ^ implied by GHC2021
    LambdaCase
    LexicalNegation
    MonomorphismRestriction
      -- ^ implied by GHC2021
    MultiParamTypeClasses
      -- ^ implied by GHC2021
    NamedFieldPuns
      -- ^ implied by GHC2021
    NamedWildCards
      -- ^ implied by GHC2021
    NumDecimals
    NumericUnderscores
      -- ^ implied by GHC2021
    OverloadedStrings
    -- PatternGuards
      -- ^ implied by GHC2021
    NoPatternGuards
    PolyKinds
      -- ^ implied by GHC2021
    PostfixOperators
      -- ^ implied by GHC2021
    RankNTypes
      -- ^ implied by GHC2021
    RelaxedPolyRec
      -- ^ implied by GHC2021
    ScopedTypeVariables
      -- ^ implied by GHC2021
    StandaloneDeriving
      -- ^ implied by GHC2021
    StandaloneKindSignatures
      -- ^ implied by GHC2021
    -- StarIsType
      -- ^ implied by GHC2021
    NoStarIsType
    TraditionalRecordSyntax
      -- ^ implied by GHC2021
    TupleSections
      -- ^ implied by GHC2021
    TypeApplications
      -- ^ implied by GHC2021
    TypeOperators
      -- ^ implied by GHC2021
    TypeSynonymInstances
      -- ^ implied by GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Wno-unticked-promoted-constructors
  if flag(cabal2nix)
    ghc-options:
      -Werror
  else
    ghc-options:
      -fdefer-typed-holes
      -fwrite-ide-info
        -- ^ Generate data for 'weeder'.

common dependencies
  build-depends:
    , base
    , bytestring
    , containers
    , deriving-trans
    , monad-control
    , monad-control-identity
    , mtl
    , text
    , time
    , transformers
    , transformers-base
    , unliftio-core

library
  import:
    , dependencies
    , language
  exposed-modules:
    , TicTacToe.Solver
    , TicTacToe.Game
    , TicTacToe.Game.Draw
    , TicTacToe.Game.Logic
  --other-modules:
  hs-source-dirs: source/library

executable tic-tac-toe-solver
  build-depends:
    , tic-tac-toe-solver
  main-is: Main.hs
  hs-source-dirs: source/executable
  default-language: GHC2021
  default-extensions:
    NoImplicitPrelude
  ghc-options:
    -threaded
